# liteaero-sim

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  clean.sh  conanfile.txt  cspell.json  rebuild.sh  run_sim.sh
.claude/: settings.local.json
.claude/commands/: impl.md  oq.md
configs/: general_aviation_ksba.json  jet_trainer_ksba.json  small_uas_ksba.json  small_uas_ksba_flight.json  test_axis_prism.json  test_axis_prism_pitch30.json  test_axis_prism_roll30.json  test_axis_prism_roll75_pitch30.json  test_axis_prism_yaw30.json  viewer.json
docs/: README.md
docs/algorithms/: aerodynamics.md  air_data.md  equations_of_motion.md  ground_directional_dynamics.md  integration.md  load_factor_allocation.md  lod_culling_geometry.md  screen_space_lod_selection.md
docs/architecture/: aero_coefficient_model.md  aircraft.md  antiwindup.md  control_interface_review.md  defect_kinematic_attitude_model.md  dynamic_block.md  environment.md  eom_implementation_roadmap.md  flow_angles_estimator.md  landing_gear.md  live_sim_view.md  logger.md  manual_input.md  overview.md  post_processing.md  propulsion.md  python_bindings.md  ring_buffer.md  sim_runner.md  terrain.md  terrain_build.md
docs/defects/: oq_lg15_gear_attitude_feedback_investigation.md  tire_dynamics_verification.md
docs/dependencies/: README.md
docs/design/: README.md  aero_coeff_estimator.md  aero_coefficient_model.md  aircraft.md  antiwindup.md  body_collider.md  control_interface_review.md  cross_platform_build.md  dynamic_element.md  environment.md  flow_angles_estimator.md  godot_plugin.md  landing_gear.md  live_sim_view.md  logger.md  navigation_filter.md  post_processing.md  propulsion.md  propulsion_coeff_estimator.md  python_bindings.md  sensor.md  sensor_air_data.md  sensor_gnss.md  sensor_ins_sim.md  sensor_laser_alt.md  (+6 more)
godot/: project.godot
include/: Aircraft.hpp  DynamicBlock.hpp  DynamicElement.hpp  ILogger.hpp  KinematicState.hpp  SISOBlock.hpp  SisoElement.hpp  numerics.hpp
proto/: CMakeLists.txt  liteaerosim.proto
python/: FilterSS2_test_vector.ipynb  gx12_config.json  manual_input_demo.ipynb  pyproject.toml  terrain_demo_cad_west.ipynb
python/assets/aircraft_configs/: general_aviation.json  jet_trainer.json  small_uas.json
python/notebooks/: gear_terrain_validation.ipynb  stall_recovery.ipynb
python/scripts/: README.md  clean_notebooks.py  pre-commit  touchdown_animation.py
python/test/: conftest.py  test_aircraft_bindings.py  test_build_terrain.py  test_colorize.py  test_export_gltf.py  test_geodesy.py  test_geoid_correct.py  test_geometry.py  test_grid_overlay.py  test_las_terrain.py  test_live_sim_session.py  test_lod_policy.py  test_log_reader.py  test_manual_input_monitor.py  test_mode_events.py  test_mosaic_render.py  test_pipeline.py  test_raster_sample.py  test_ribbon_trail.py  test_ring_buffer_bindings.py  test_runner_bindings.py  test_simplify.py  test_terrain_chunks.py  test_terrain_paths.py  test_time_history.py  test_trajectory_view.py  test_triangulate.py  test_validate_aircraft_config.py  test_verify.py
python/tools/: anim_wireframe.py  gen_stall_notebook.py  gen_test_assets.py  geodesy.py  geometry.py  live_sim.py  live_sim_session.py  log_reader.py  manual_input_monitor.py  mode_overlay.py  time_history.py  trajectory_view.py  validate_aircraft_config.py
python/tools/terrain/: __init__.py  _bootstrap.py  build_terrain.py  colorize.py  download.py  export.py  export_gltf.py  geoid_correct.py  grid_overlay.py  las_terrain.py  lod_policy.py  mosaic.py  mosaic_render.py  raster_sample.py  simplify.py  terrain_chunks.py  terrain_paths.py  triangulate.py  verify.py
src/: Aircraft.cpp  CMakeLists.txt  DynamicElement.cpp  KinematicState.cpp  SisoElement.cpp  numerics.cpp
src/aerodynamics/: AeroCoeffEstimator.cpp  AeroPerformance.cpp  LoadFactorAllocator.cpp
src/airframe/: AirframePerformance.cpp  Inertia.cpp
src/broadcaster/: UdpSimulationBroadcaster.cpp
src/collision/: BodyCollider.cpp
src/control/: Antiwindup.cpp  ControlAltitude.cpp  ControlHeading.cpp  ControlHeadingRate.cpp  ControlLoadFactor.cpp  ControlRoll.cpp  ControlVerticalSpeed.cpp  Derivative.cpp  FilterFIR.cpp  FilterSS.cpp  FilterSS2.cpp  FilterSS2Clip.cpp  FilterTF.cpp  FilterTF2.cpp  Integrator.cpp  Limit.cpp  RateLimit.cpp  SISOPIDFF.cpp  Unwrap.cpp  control.cpp  filter_realizations.cpp
src/environment/: LodSelector.cpp  MeshQualityVerifier.cpp  TerrainCell.cpp  TerrainMesh.cpp  TerrainTile.cpp
src/landing_gear/: LandingGear.cpp  WheelUnit.cpp
src/logger/: LogReader.cpp  Logger.cpp  mcap_impl.cpp  mcap_static.hpp
src/navigation/: WGS84.cpp
src/propulsion/: MotorElectric.cpp  MotorPiston.cpp  PropellerAero.cpp  PropulsionEDF.cpp  PropulsionJet.cpp  PropulsionProp.cpp
src/python/: CMakeLists.txt  bind_aircraft.cpp  bind_broadcaster.cpp  bind_ring_buffer.cpp  bind_runner.cpp  bind_terrain.cpp  bindings.cpp  py_aircraft_types.hpp
src/runner/: ChannelRegistry.cpp  SimRunner.cpp
test/: AeroCoeffEstimator_test.cpp  AeroPerformance_test.cpp  Aircraft_test.cpp  AirframePerformance_test.cpp  Antiwindup_test.cpp  BodyCollider_test.cpp  CMakeLists.txt  Derivative_test.cpp  FilterRealizations_test.cpp  FilterSS2Clip_test.cpp  FilterSS2_test.cpp  FilterSS_test.cpp  FilterTF2_test.cpp  FilterTF_test.cpp  Gain_test.cpp  Inertia_test.cpp  Integrator_test.cpp  KinematicState_test.cpp  LandingGearTerrain_test.cpp  LandingGear_test.cpp  Limit_test.cpp  LoadFactorAllocator_test.cpp  LodSelector_test.cpp  Logger_test.cpp  MeshQualityVerifier_test.cpp  Motor_test.cpp  PropellerAero_test.cpp  PropulsionEDF_test.cpp  PropulsionJet_test.cpp  PropulsionProp_test.cpp  RateLimit_test.cpp  RectilinearTable_test.cpp  RingBuffer_test.cpp  SimRunner_test.cpp  SimulationBroadcaster_test.cpp  TableAxis_test.cpp  TerrainMesh_test.cpp  TerrainTile_test.cpp  Terrain_test.cpp  TireDynamics_test.cpp  (+3 more)
test/data/aircraft/: general_aviation.json  jet_trainer.json  small_uas.json
test/data/las_terrain/: py_written.las_terrain
tools/: CMakeLists.txt  live_sim.cpp
(+114 files in other folders)
