[project]
name = "liteaerosim-tools"
version = "0.1.0"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.0",
    "black>=24.0",
    "ruff>=0.4",
]
terrain = [
    "rasterio>=1.3",
    "scipy>=1.11",
    "numpy>=1.26",
    "pyproj>=3.6",
    "pyfqmr>=0.2",
    "trimesh>=4.0",
    "requests>=2.31",
    "earthaccess>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["tools", "tools/terrain"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
